# bili-topic-radar

./: .env.example  .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  pyproject.toml  使用教程.md
docs/dev/: RELEASE_PLAN.md  ai_analyzer_spec.md  web_dark_theme_spec.md  web_redesign_spec.md
examples/: evidence_claudecode.json  evidence_mcp.json
examples/reports/: radar-MCP.md  radar-claude-code.md
scripts/: start.command  start.sh
skills/bilibili-topic-radar/: SKILL.md
src/bili_topic_radar/: __init__.py  analyze.py  analyzer.py  cache.py  client.py  collect.py  formatting.py  models.py  normalize.py  opportunity.py  probe.py  rate_limit.py  server.py  tools.py  web.py
tests/: test_analyzer.py  test_collect.py  test_normalize.py  test_opportunity.py  test_web.py
