[project]
name = "bili-topic-radar"
version = "0.1.0"
description = "Local Bilibili topic research dashboard for collision checks, comment demand mining, and optional AI analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bilibili-api-python>=17.0.0",
    "fastmcp>=2.0.0",
    # httpx SOCKS support — bilibili-api uses httpx; reaching B站 from
    # outside CN typically routes through a local SOCKS proxy (ALL_PROXY).
    "socksio>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
bili-topic-radar = "bili_topic_radar.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bili_topic_radar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
